restructure mail agent flow
Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>