@@ -24,6 +24,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-integration")
     implementation("org.springframework.boot:spring-boot-starter-mail")
     implementation("org.springframework.integration:spring-integration-mail")
+    implementation("org.simplejavamail:simple-java-mail:9.3.2")                // use mail-parser only
     implementation("org.springframework.ai:spring-ai-starter-model-deepseek")
     testImplementation("org.springframework.boot:spring-boot-starter-mail-test")
     testImplementation("org.springframework.integration:spring-integration-test")
@@ -38,4 +39,8 @@ dependencyManagement {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
